[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
authors = [{name = "aleksul", email = "me@aleksul.space"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed"
]
dependencies = [
  "typing-extensions>=4.3.0,<5.0.0; python_version < \"3.10\"",
  "packaging>=22.0"
]
description = "Repid framework: simple to use, fast to run and extensible to adopt job scheduler"
dynamic = ["version"]
license = {text = "MIT"}
name = "repid"
readme = "README.md"
requires-python = ">=3.8"

[project.entry-points.pytest11]
repid = "repid.testing.plugin"

[project.optional-dependencies]
amqp = ["aiormq<7.0.0,>=6.4.0"]
cron = ["croniter<2.0.0,>=1.3.4"]
pydantic = ["pydantic>=2.0.0,<3.0.0"]
redis = ["redis<5.1.0,>=5.0.0"]
test = ["pytest", "pytest-asyncio"]

[project.urls]
documentation = "https://repid.aleksul.space"
funding = "https://github.com/sponsors/aleksul"
repository = "https://github.com/aleksul/repid"
tracker = "https://github.com/aleksul/repid/issues"

[tool.black]
line-length = 100

[tool.coverage]

[tool.coverage.report]
exclude_lines = [
  '\.\.\.',
  'if TYPE_CHECKING:',
  'pragma: no cover'
]
fail_under = 100

[tool.coverage.run]
omit = ["repid/connections/rabbitmq/protocols.py"]
source = ["repid"]

[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
exclude = ["benchmarks"]
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
disallow_any_unimported = false
module = "tests.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["pytest_docker_tools", "pytest_lazyfixture"]

[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
includes = ["repid"]

[tool.pdm.dev-dependencies]
docs = [
  "mkdocs-material>=9.1.16",
  "mike>=1.1.2",
  "mkdocs-glightbox>=0.3.4",
  "setuptools>=65.5.1"
]
format = ["black>=23.3.0"]
lint = [
  "mypy>=1.4.1",
  "types-redis>=4.6.0.0",
  "types-croniter>=1.4.0.0",
  "ruff>=0.0.275"
]
pre-commit = ["pre-commit>=3.3.3"]
tests = [
  "pytest>=7.3.2",
  "pytest-asyncio>=0.21.0",
  "pytest-pretty>=1.2.0",
  "pytest-clarity>=1.0.1",
  "pytest-lazy-fixture>=0.6.3",
  "pytest-docker-tools>=3.1.3",
  "pytest-timeout>=2.1.0",
  "coverage[toml]>=7.2.7",
  "hypothesis>=6.79.1",
  "httpx>=0.24.1"
]

[tool.pdm.scripts]
erase-coverage = "coverage erase"
fast-test = {composite = ["erase-coverage", "only-test -m 'not integration' --ignore='tests/test_hypothesis.py'", "report-coverage --omit 'repid/connections/**'"]}
only-test = "coverage run -m pytest --diff-symbols --hypothesis-verbosity=normal tests/"
report-coverage = "coverage report --no-skip-covered --show-missing"
test = {composite = ["erase-coverage", "only-test", "xml-coverage", "report-coverage"]}
xml-coverage = "coverage xml --fail-under=0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: marker for integration tests (deselect with `-m 'not integration'`)"]
timeout = 150

[tool.ruff]
ignore = ["E501", "N999", "PLR0913"]
line-length = 100
per-file-ignores = {"tests/*" = ["S", "PLR2004", "FBT", "BLE", "S101"], "repid/connections/__init__.py" = ["F401"], "repid/testing/__init__.py" = ["F401"], "benchmarks/*" = ["T201", "S603", "S607"], "**/__init__.py" = ["PLC0414"]}
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "T10",
  "ISC",
  "ICN",
  "G",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "RET",
  "SIM",
  "TID",
  "ARG",
  "PTH",
  "PGH",
  "PL",
  "RUF"
]
target-version = "py38"
